set jvmflags for git